Mobile Jump Fix - Changed Background Size to auto width and 100vh height

--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -4,7 +4,7 @@
     width: 100vw;
     background-image: url('../img/banner.jpg');
     background-attachment: fixed;
-    background-size: cover;
+    background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position: center;
     background-color: white;
@@ -55,7 +55,7 @@
     width: 100%;
     background-image: url('../img/bible.jpg');
     background-attachment: fixed;
-    background-size: cover;
+    background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position: bottom;
     background-color: white;
@@ -79,10 +79,10 @@
 
 .parallax_2{
     min-height: 35vh;
-    width: 100%;
+    width: 100vw;
     background-image: url('../img/KakaoTalk_20220404_172239257.jpg');
     background-attachment: fixed;
-    background-size: cover;
+    background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position: center;
     background-color: white;
@@ -106,10 +106,10 @@
 
 .parallax_3{
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     background-image: url('../img/sven-pieren-npl_R94xGZA-unsplash.jpg');
     background-attachment: fixed;
-    background-size: cover;
+    background-size: auto 100vh;
     background-repeat: no-repeat;
     background-position-y: 60%;
     background-color: white;
